--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -23,68 +24,59 @@ html {
   @apply transform transition-transform duration-300 hover:bg-[#c75315] hover:scale-105 hover:text-white;
 }
 
-
-
-
-.heading-1{
-  @apply text-4xl md:text-[60px] font-prata leading-tight
+.heading-1 {
+  @apply text-4xl md:text-[60px] font-prata leading-tight;
 }
-.heading-2{
-  @apply text-3xl md:text-[48px] font-prata leading-tight
+.heading-2 {
+  @apply text-3xl md:text-[48px] font-prata leading-tight;
 }
-.heading-3{
-  @apply text-2xl md:text-[38px] font-prata leading-tight
+.heading-3 {
+  @apply text-2xl md:text-[38px] font-prata leading-tight;
 }
-.heading-4{
-  @apply text-xl md:text-[28px] font-prata leading-tight
+.heading-4 {
+  @apply text-xl md:text-[28px] font-prata leading-tight;
 }
-.heading-5{
-  @apply text-lg md:text-[20px] font-prata leading-tight
+.heading-5 {
+  @apply text-lg md:text-[20px] font-prata leading-tight;
 }
 
-.heading-5{
-  @apply text-lg  leading-tight
+.heading-5 {
+  @apply text-lg  leading-tight;
 }
 
-.para-large{
-  @apply text-base md:text-lg
+.para-large {
+  @apply text-base md:text-lg;
 }
-.para-medium{
-  @apply text-[13px] md:text-[14px]
+.para-medium {
+  @apply text-[13px] md:text-[14px];
 }
-.para-small{
-  @apply text-[12px] md:text-[13px]
+.para-small {
+  @apply text-[12px] md:text-[13px];
 }
-
-
-
-
-
-
 
 /* Css for range input field in sidebar */
 .slider {
   appearance: none;
-  height: 20px; 
-  background: #d1d5db61; 
-  border-radius: 10px; 
-  outline: none; 
+  height: 20px;
+  background: #d1d5db61;
+  border-radius: 10px;
+  outline: none;
 }
 
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none; 
-  appearance: none; 
-  width: 25px; 
-  height: 25px; 
-  border-radius: 50%; 
-  background: #EB6F2D; 
-  cursor: pointer; 
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #eb6f2d;
+  cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
   width: 25px;
-  height: 25px; 
-  border-radius: 50%; 
-  background: #EB6F2D; 
-  cursor: pointer; 
+  height: 25px;
+  border-radius: 50%;
+  background: #eb6f2d;
+  cursor: pointer;
 }
